# nn-from-scratch

./: pyproject.toml
nn_from_scratch/LeNet/: torch_model.py
