[tool.poetry]
name = "nn-from-scratch"
version = "0.1.0"
description = ""
authors = ["Eaeajj <ozalesskiy71@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
torch = "^2.2.1"
tensorflow = "^2.16.1"
package-name = "^0.1"
keras = "^3.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
